DS-5873 - Typos, and added rate limit related status codes to retry function.

--- a/ai-feature-api/AI_Features_API_Getting_Started_Guide.ipynb
+++ b/ai-feature-api/AI_Features_API_Getting_Started_Guide.ipynb
@@ -62,14 +62,14 @@
     "\n",
     "retries = Retry(total=7,\n",
     "                backoff_factor=0.1,\n",
-    "                status_forcelist=[ 500, 502, 503, 504 ])\n",
+    "                status_forcelist=[ 408, 429, 500, 502, 503, 504 ])\n",
     "\n",
     "s.mount('https://', HTTPAdapter(max_retries=retries))\n",
     "\n",
     "def get_payload(request_string):\n",
     "    '''\n",
     "    Basic wrapper code to retrieve the JSON payload from the API, and raise an error if no response is given.\n",
-    "    Using urllib3, this also implemeents exponential backoff and retries for robustness.\n",
+    "    Using urllib3, this also implements exponential backoff and retries for robustness.\n",
     "    '''\n",
     "    response = s.get(request_string, )\n",
     "\n",
@@ -2148,7 +2148,7 @@
    "metadata": {},
    "source": [
     "### Example ID 1 (Chicago Houses)\n",
-    "This example is an artificial hand drawn boundary around approximately 3 residential properties. It showcases a common issue with parcel boundaries. Where the parcel boundary is shifted relative to ground, it is reasonable common to retrieve a feature that clearly belongs to a neighbouring parcel, or to have a legitimate feature that extends beyond the queried parcel by some amount. While the on-the-ground accuracy of the imagery and AI can cause this, it is more commonly caused by parcel boundaries that have been digitised incorrectly (and there is a high degree of local variability in this!). One method to deal with this is to ignore any objects where area of the intersection of the feature and the parcel is small compared to the area of the feature, AND small compared to the size of the parcel. This allows you to retain small features that lie almost completely within the parcel, as well as large multi-parcel buildings, where enough of the building protrudes into the parcel that the parcel \"substantially\" contains some of the building."
+    "This example is an artificial hand drawn boundary around approximately 3 residential properties. It showcases a common issue with parcel boundaries. Where the parcel boundary is shifted relative to ground, it is reasonably common to retrieve a feature that clearly belongs to a neighbouring parcel, or to have a legitimate feature that extends beyond the queried parcel by some amount. While the on-the-ground accuracy of the imagery and AI can cause this, it is more commonly caused by parcel boundaries that have been digitised incorrectly (and there is a high degree of local variability in this!). One method to deal with this is to ignore any objects where area of the intersection of the feature and the parcel is small compared to the area of the feature, AND small compared to the size of the parcel. This allows you to retain small features that lie almost completely within the parcel, as well as large multi-parcel buildings, where enough of the building protrudes into the parcel that the parcel \"substantially\" contains some of the building."
    ]
   },
   {
