--- a/ai-feature-api/Parcel_rollup.ipynb
+++ b/ai-feature-api/Parcel_rollup.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Parcel rollup\n",
     "\n",
-    "With this notebook we demonstrate how to pull data from the AI features API on a per parcel bases, filter out features we do not not consider part of the parcels, and to transform the data into a tabular format."
+    "This notebook demonstrates how to pull data from the AI features API on a per parcel basis, filter out features we do not not consider part of the parcels, and to transform (rollup) the data into a tabular format."
    ]
   },
   {
@@ -535,7 +535,7 @@
    "source": [
     "# Fetching data from the API\n",
     "\n",
-    "By using a local cache we do not have to make the same request mulitple times."
+    "By using a local cache we do not have to make the same request multiple times."
    ]
   },
   {
@@ -668,7 +668,7 @@
    "source": [
     "# Create geodataframe\n",
     "\n",
-    "We use geopandas for efficient geoprocessing. The examples show features for a few parcels. Note how features on the edge of parcel boundaries are included."
+    "We use geopandas for efficient geo-processing. The examples show features for a few parcels. Note how features on the edge of parcel boundaries are included."
    ]
   },
   {
@@ -968,7 +968,7 @@
    "source": [
     "# Create parcel rollup\n",
     "\n",
-    "Once we have the features in a parcel all that remains is to flatten the features and attributes to tabular foramt. Note that roof and building values relate to the dominant building and roof within a parcel. The dmoninant building is defined as the building with the largest area with in the parcel."
+    "Once we have the features in a parcel, all that remains is to flatten the features and attributes to tabular foramt. Note that roof and building values relate to the dominant building and roof within a parcel. The dmoninant building is defined as the building with the largest area within the parcel."
    ]
   },
   {
@@ -1381,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
