DS-6375 PR feedback

--- a/ai-feature-api/Parcel_rollup.ipynb
+++ b/ai-feature-api/Parcel_rollup.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "### Which AI Packs and Feature Classes to use?\n",
     "\n",
-    "These lines control which of the above IDs are used (anything not in `ALL_USED_IDS` is ignored). It starts to look very cluttered with all packs, so a subset of these (`VISUALISATION_IDS`) is used for the visualisation of examples.\n",
+    "The following cell controls which class IDs are used (anything not in `ALL_USED_IDS` is ignored). It starts to look very cluttered with all packs, so a subset of these (`VISUALISATION_IDS`) is used for the visualisation of examples.\n",
     "\n",
     "The source of truth for feature class IDs is the \"classes.json\" endpoint of the API, which can be refreshed periodically to add new feature class IDs to existing packs, update any changed descriptions, or reflect any new AI Packs added to your subscription.\n",
     "\n",
@@ -624,7 +624,11 @@
    "id": "awful-tractor",
    "metadata": {},
    "source": [
-    "## Feature filtering params"
+    "## Feature filtering params\n",
+    "\n",
+    "The features API returns all features intersecting an AOI. Some of these features may not be relevant to our calculations. In the following cell, we define thresholds (per class) to decide which features should be discarded based on feature size, confidence, and the area and ratio of the feature that intersects the AOI.\n",
+    "\n",
+    "Refer to the [filter features](#Filter-features) section for more detail on exactly how these are used."
    ]
   },
   {
