DS-6465 PR feedback

--- a/notebooks/AI_Offline_Parcel_Legacy_Format.ipynb
+++ b/notebooks/AI_Offline_Parcel_Legacy_Format.ipynb
@@ -271,7 +271,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 181/181 [7:18:41<00:00, 145.42s/it]  \n"
+      "100%|██████████| 20/20 [06:12<00:00, 18.65s/it]\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_to_old_schema(dfr):\n",
+    "def map_to_legacy_schema(dfr):\n",
     "    \"\"\"\n",
     "    Map data in the AI offline Parcel data schema to the legacy format\n",
     "    \"\"\"\n",
@@ -332,7 +332,7 @@
     "         'primary_roof_flat_confidence': 'flat_roof_type_confidence',\n",
     "         'primary_roof_turret_present': 'turret_roof_type_present',\n",
     "         'primary_roof_turret_confidence': 'turret_roof_type_confidence',\n",
-    "         'primary_roof_pitch': 'roof_pitch_degrees',\n",
+    "         'primary_roof_pitch_degrees': 'roof_pitch_degrees',\n",
     "         'primary_building_area_sqft': 'area_under_roof_sqft',\n",
     "         'primary_building_area_sqm': 'area_under_roof_sqm',\n",
     "         'primary_building_height_m': 'building_height_m',\n",
@@ -402,7 +402,7 @@
     "        dfs.append(pd.read_csv(p))\n",
     "    full_df = pd.concat(dfs)\n",
     "    full_df.to_csv(OUTPUT_DIR / f\"{source.stem}.csv\", index=False)\n",
-    "    transformed_full_df = map_to_old_schema(full_df)\n",
+    "    transformed_full_df = map_to_legacy_schema(full_df)\n",
     "    transformed_full_df.to_csv(LEGACY_DIR / f\"{source.stem}.csv\", index=False)\n"
    ]
   },
