Added coverage.json endpoint to user guide.

--- a/notebooks/AI_Feature_API_Getting_Started_Guide.ipynb
+++ b/notebooks/AI_Feature_API_Getting_Started_Guide.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "FEATURES_URL = \"https://api.nearmap.com/ai/features/v4/features.json\"\n",
     "CLASSES_URL = \"https://api.nearmap.com/ai/features/v4/classes.json\"\n",
     "PACKS_URL = \"https://api.nearmap.com/ai/features/v4/packs.json\"\n",
-    "\n",
+    "COVERAGE_URL = \"https://api.nearmap.com/ai/features/v4/coverage.json\"\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "10         POLYGON ((-96.20949 41.20676, -96.20978 41.22364, -96.18481 41.22355, -96.18...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "3680e1b8-8ae1-5a15-8ec7-820078ef3298                                                                              NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "vegetation                                                                                        []  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,6 +562,161 @@
     "packs_payload = get_payload(request_string)\n",
     "df_packs = pd.DataFrame(packs_payload[\"packs\"]).set_index(\"code\")\n",
     "df_packs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checking Coverage of AI processing: The \"coverage.json\" endpoint\n",
+    "In order to find out which imagery surveys have processed AI data, and which AI System Version is available on each, the `coverage.json` endpoint is the most helpful. This differs from the general Nearmap coverage API, in that it provides more specific information about AI results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>captureDate</th>\n",
+       "      <th>systemVersion</th>\n",
+       "      <th>classes</th>\n",
+       "      <th>taskId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3c9b31fc-c05e-5543-ae53-a657e1ac1266</td>\n",
+       "      <td>2021-03-12</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>af200ef0-c8c8-5fec-8090-3553b2702c08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ccae0ab6-5392-5787-a477-04325f7e1a78</td>\n",
+       "      <td>2020-10-07</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>499a664d-4bd8-5afb-86c9-aa8a7accdcae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>55692456-8bb2-5d8f-9f16-500e98e467d3</td>\n",
+       "      <td>2020-07-14</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>1ddcdd2e-68a4-522b-b394-d8f39acd7858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8321f37e-4033-562d-9421-a08120ff39f7</td>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>gen3-winter_sunrise-1.3</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>68845e2c-6a35-5f61-9878-2cba693a7824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5bd9d6fd-d41a-5d58-b03b-96136b9a9f84</td>\n",
+       "      <td>2019-10-18</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>c2a3b1ee-bdc3-5dc2-8d71-af1026634aa4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>eaaf64c0-5bc7-5905-9a5f-0040a0ea6c6b</td>\n",
+       "      <td>2019-03-26</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>2e152ed9-9dcc-50eb-8867-84b34ca4fa76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5f8b58e4-3199-55ae-a2da-304c47d66b37</td>\n",
+       "      <td>2018-09-23</td>\n",
+       "      <td>gen4-building_storm-1.1</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>f4a4abb7-5de2-538a-8656-4daf25278ebe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6817e8cb-ecd4-5087-b3b1-38d137e39b77</td>\n",
+       "      <td>2017-06-10</td>\n",
+       "      <td>gen3-winter_sunrise-1.3</td>\n",
+       "      <td>[{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...</td>\n",
+       "      <td>ddcf7468-0ebe-5c69-8b88-046c31eb1b70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id captureDate            systemVersion  \\\n",
+       "0  3c9b31fc-c05e-5543-ae53-a657e1ac1266  2021-03-12  gen4-building_storm-1.1   \n",
+       "1  ccae0ab6-5392-5787-a477-04325f7e1a78  2020-10-07  gen4-building_storm-1.1   \n",
+       "2  55692456-8bb2-5d8f-9f16-500e98e467d3  2020-07-14  gen4-building_storm-1.1   \n",
+       "3  8321f37e-4033-562d-9421-a08120ff39f7  2020-03-13  gen3-winter_sunrise-1.3   \n",
+       "4  5bd9d6fd-d41a-5d58-b03b-96136b9a9f84  2019-10-18  gen4-building_storm-1.1   \n",
+       "5  eaaf64c0-5bc7-5905-9a5f-0040a0ea6c6b  2019-03-26  gen4-building_storm-1.1   \n",
+       "6  5f8b58e4-3199-55ae-a2da-304c47d66b37  2018-09-23  gen4-building_storm-1.1   \n",
+       "7  6817e8cb-ecd4-5087-b3b1-38d137e39b77  2017-06-10  gen3-winter_sunrise-1.3   \n",
+       "\n",
+       "                                                                           classes  \\\n",
+       "0  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "1  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "2  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "3  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "4  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "5  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "6  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "7  [{'id': '97a1f8a8-7cf2-4e81-82b4-753ee225d9ed'}, {'id': 'a2e4ae39-8a61-5515-...   \n",
+       "\n",
+       "                                 taskId  \n",
+       "0  af200ef0-c8c8-5fec-8090-3553b2702c08  \n",
+       "1  499a664d-4bd8-5afb-86c9-aa8a7accdcae  \n",
+       "2  1ddcdd2e-68a4-522b-b394-d8f39acd7858  \n",
+       "3  68845e2c-6a35-5f61-9878-2cba693a7824  \n",
+       "4  c2a3b1ee-bdc3-5dc2-8d71-af1026634aa4  \n",
+       "5  2e152ed9-9dcc-50eb-8867-84b34ca4fa76  \n",
+       "6  f4a4abb7-5de2-538a-8656-4daf25278ebe  \n",
+       "7  ddcf7468-0ebe-5c69-8b88-046c31eb1b70  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_lon, example_lat = (-87.73101994900836, 41.79082699478777)\n",
+    "request_string = f\"{COVERAGE_URL}?point={example_lon},{example_lat}&apikey={API_KEY}\"\n",
+    "coverage_payload = get_payload(request_string)\n",
+    "df_coverage = pd.DataFrame(coverage_payload[\"results\"])\n",
+    "df_coverage"
    ]
   },
   {
