[TRO-1244] Renaming from nearmap-ai-user-guides to nmaipy

--- a/notebooks/AI_Offline_Parcel_example.ipynb
+++ b/notebooks/AI_Offline_Parcel_example.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# AI Offline Parcel example\n",
     "\n",
-    "This notebook demonstrates how to use the `nearmap_ai` package to pull data from the AI features API on a per parcel basis, filter out features we do not not consider part of the parcels, and to transform (rollup) the data into a tabular format."
+    "This notebook demonstrates how to use the `nmaipy` package to pull data from the AI features API on a per parcel basis, filter out features we do not not consider part of the parcels, and to transform (rollup) the data into a tabular format."
    ]
   },
   {
@@ -30,8 +30,8 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Local utilities\n",
-    "from nearmap_ai.feature_api import FeatureApi\n",
-    "from nearmap_ai import constants, log, parcels\n",
+    "from nmaipy.feature_api import FeatureApi\n",
+    "from nmaipy import constants, log, parcels\n",
     "\n",
     "# Logging level - set this to determine what level of info is returned. \"DEBUG\" adds timings for API responses.\n",
     "log.configure_logger(logging.INFO)\n",
@@ -279,7 +279,7 @@
     " - `aoi_id`: A unique identifier\n",
     " - `geometry`: A polygon or multipolygon geometry (in this case in EPSG 4326)\n",
     " \n",
-    "See nearmap_ai.parcels.read_from_file for supported formats.\n",
+    "See nmaipy.parcels.read_from_file for supported formats.\n",
     "\n",
     "There are some automated cleanup internal to the function to:\n",
     "- Check for duplicate ids (which may indicate a data input issue)\n",
@@ -389,7 +389,7 @@
     }
    ],
    "source": [
-    "# Read parcel test data set using the nearmap_ai.parcels module\n",
+    "# Read parcel test data set using the nmaipy.parcels module\n",
     "parcels_gdf = parcels.read_from_file(Path(\"../tests/data/test_parcels_2.csv\"))\n",
     "# Country, used for projections (make sure this matches the parcel data)\n",
     "country = \"US\"\n",
@@ -492,7 +492,7 @@
     " - Features that are mostly outside the parcel, unless there is significant area overlap\n",
     " - Feature classes without defined filtering parameters are automatically included if listed in the `ALL_USED_IDS` constant.\n",
     " \n",
-    "Defualt thresholds for these filters are defined in `nearmap_ai.parcels`. Any of the default values can be overwritten by passing in a config dictionary to the `filter_features_in_parcels` function."
+    "Defualt thresholds for these filters are defined in `nmaipy.parcels`. Any of the default values can be overwritten by passing in a config dictionary to the `filter_features_in_parcels` function."
    ]
   },
   {
