--- a/notebooks/AI_Offline_Parcel_Legacy_Format.ipynb
+++ b/notebooks/AI_Offline_Parcel_Legacy_Format.ipynb
@@ -11,11 +11,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "id": "5bda1244",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -27,9 +25,9 @@
     "import concurrent.futures\n",
     "import os\n",
     "\n",
-    "from nearmap_ai.feature_api import FeatureApi\n",
-    "from nearmap_ai import parcels\n",
-    "from nearmap_ai.constants import (\n",
+    "from nmaipy.feature_api import FeatureApi\n",
+    "from nmaipy import parcels\n",
+    "from nmaipy.constants import (\n",
     "    LAT_LONG_CRS,\n",
     "    BUILDING_ID,\n",
     "    ROOF_ID,\n",
