[TRO-1246] Fixed coverage checker with some tweaks and better explanations

--- a/notebooks/Coverage_Checker.ipynb
+++ b/notebooks/Coverage_Checker.ipynb
@@ -28,7 +28,7 @@
     "DATA_DIR = Path(\"../data\")\n",
     "COVERAGE_CHUNK_DIR = DATA_DIR / \"coverage_chunks\"\n",
     "POINTS_FILE = DATA_DIR / \"points.csv\"\n",
-    "ID_COL = \"Address_ID\"\n",
+    "ID_COL = \"point_id\"\n",
     "API_KEY = os.environ[\"API_KEY\"]"
    ]
   },
@@ -50,7 +50,8 @@
    },
    "outputs": [],
    "source": [
-    "df_points = pd.read_csv(POINTS_FILE, index_col = 0, parse_dates=[\"until\"])\n",
+    "df_points = pd.read_csv(POINTS_FILE, index_col = 0)\n",
+    "df_points[\"until\"] = pd.to_datetime(df_points[\"until\"], format=\"%d/%m/%Y\")\n",
     "df_points.until.hist()\n",
     "df_points"
    ]
@@ -107,7 +108,7 @@
     "        logging.debug(f\"Pulling chunk from API for {f}.\")\n",
     "        # Multi-threaded pulls are ok - the API is designed to cope fine with 10-20 threads running in parallel pulling requests.\n",
     "        c = nmaipy.coverage_utils.threaded_get_coverage_from_point_results(\n",
-    "            df_point_chunk, since_col=\"since\", until_col=\"until\", apikey=API_KEY, threads=10\n",
+    "            df_point_chunk, since_col=\"since\", until_col=\"until\", apikey=API_KEY, threads=20\n",
     "        )\n",
     "        c_with_idx = []\n",
     "        for j in range(len(c)):\n",
@@ -161,7 +162,7 @@
    "outputs": [],
    "source": [
     "# The latest survey for each point within the point's since-until range, regardless of whether it has AI.\n",
-    "df_latest = df.sort_values(\"captureDate\").groupby(\"Address_ID\").last()\n",
+    "df_latest = df.sort_values(\"captureDate\").groupby(ID_COL).last()\n",
     "df_latest"
    ]
   },
@@ -184,7 +185,7 @@
    "outputs": [],
    "source": [
     "# The latest survey for each point within the point's since-until range, only if it has AI.\n",
-    "df_ai_latest = df.query(\"aifeatures == True\").sort_values(\"captureDate\").groupby(\"Address_ID\").last()\n",
+    "df_ai_latest = df.query(\"aifeatures == True\").sort_values(\"captureDate\").groupby(ID_COL).last()\n",
     "df_ai_latest"
    ]
   },
@@ -196,7 +197,8 @@
    "outputs": [],
    "source": [
     "# Show what fraction have a valid AI result already\n",
-    "f\" {len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\""
+    "display(f\" {len(df_ai_latest) / len(df_points) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\")\n",
+    "display(f\" {len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the points that have at least one valid imagery survey have valid AI coverage in the since-until range.\")"
    ]
   },
   {
@@ -227,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_no_coverage_latest = df_no_coverage.sort_values(\"captureDate\").groupby(\"Address_ID\").last()\n",
+    "df_no_coverage_latest = df_no_coverage.sort_values(\"captureDate\").groupby(ID_COL).last()\n",
     "df_no_coverage_latest"
    ]
   },
@@ -238,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f\" {len(df_no_coverage_latest) / len(df_latest) * 100:0.1f}% of the originally provided points DON'T have valid AI coverage in the since-until range.\""
+    "f\" {len(df_no_coverage_latest) / len(df_latest) * 100:0.1f}% of the points that have valid imagery DON'T have valid AI coverage in the since-until range.\""
    ]
   },
   {
@@ -251,7 +253,7 @@
     "# Iteratively cycle through identifying the most common \"survey_id\" in df_no_coverage, and then remove all rows that have coverage on that survey_id.\n",
     "\n",
     "df_surveys_to_run = []\n",
-    "SURVEY_NUMBER_BUDGET = 100\n",
+    "SURVEY_NUMBER_BUDGET = 200\n",
     "\n",
     "for i in range(SURVEY_NUMBER_BUDGET):\n",
     "    most_common_survey = df_no_coverage.survey_id.value_counts().index[0]\n",
@@ -271,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_no_coverage_latest = df_no_coverage.sort_values(\"captureDate\").groupby(\"Address_ID\").last()\n",
+    "df_no_coverage_latest = df_no_coverage.sort_values(\"captureDate\").groupby(ID_COL).last()\n",
     "df_no_coverage_latest"
    ]
   },
@@ -284,8 +286,10 @@
    "source": [
     "frac_with_ai_already = len(df_ai_latest.query('aifeatures')) / len(df_latest)\n",
     "frac_without_ai_after_extra_surveys = len(df_no_coverage_latest) / len(df_latest)\n",
+    "simulated_num_with_coverage = len(df_latest) - len(df_no_coverage_latest)\n",
     "\n",
-    "f\"If an additional {SURVEY_NUMBER_BUDGET} surveys are run with AI, the AI coverage would increase from {frac_with_ai_already*100:0.1f}% to {(1-frac_without_ai_after_extra_surveys)*100:0.1f}%.\""
+    "display(f\"If an additional {SURVEY_NUMBER_BUDGET} surveys are run with AI, the AI coverage (out of possible imagery surveys) would increase from {frac_with_ai_already*100:0.1f}% to {(1-frac_without_ai_after_extra_surveys)*100:0.1f}%\")\n",
+    "display(f\"i.e. {simulated_num_with_coverage:,} points covered in total, out of the original {len(df_points):,} provided ({simulated_num_with_coverage / len(df_points)*100:0.1f}%) after running  {SURVEY_NUMBER_BUDGET} surveys.\")"
    ]
   },
   {
