--- a/notebooks/Coverage_Checker.ipynb
+++ b/notebooks/Coverage_Checker.ipynb
@@ -27,6 +27,8 @@
     "\n",
     "DATA_DIR = Path(\"../data\")\n",
     "COVERAGE_CHUNK_DIR = DATA_DIR / \"coverage_chunks\"\n",
+    "AI_COVERAGE_CHUNK_DIR = DATA_DIR / \"ai_coverage_chunks\"\n",
+    "\n",
     "POINTS_FILE = DATA_DIR / \"points.csv\"\n",
     "ID_COL = \"point_id\"\n",
     "API_KEY = os.environ[\"API_KEY\"]"
@@ -50,8 +52,8 @@
    },
    "outputs": [],
    "source": [
-    "df_points = pd.read_csv(POINTS_FILE, index_col = 0)\n",
-    "df_points[\"until\"] = pd.to_datetime(df_points[\"until\"], format=\"%d/%m/%Y\")\n",
+    "df_points = pd.read_csv(POINTS_FILE, index_col = 0, parse_dates=[\"since\", \"until\"])\n",
+    "df_points.since.hist()\n",
     "df_points.until.hist()\n",
     "df_points"
    ]
@@ -65,6 +67,8 @@
    "source": [
     "if \"since\" not in df_points.columns:\n",
     "    df_points[\"since\"] = SINCE # A very old date just to have a since column.\n",
+    "else:\n",
+    "    df_points[\"since\"] = df_points[\"since\"].dt.strftime(\"%Y-%m-%d\")\n",
     "df_points[\"until\"] = df_points[\"until\"].dt.strftime(\"%Y-%m-%d\")"
    ]
   },
@@ -108,7 +112,7 @@
     "        logging.debug(f\"Pulling chunk from API for {f}.\")\n",
     "        # Multi-threaded pulls are ok - the API is designed to cope fine with 10-20 threads running in parallel pulling requests.\n",
     "        c = nmaipy.coverage_utils.threaded_get_coverage_from_point_results(\n",
-    "            df_point_chunk, since_col=\"since\", until_col=\"until\", apikey=API_KEY, threads=20\n",
+    "            df_point_chunk, since_col=\"since\", until_col=\"until\", apikey=API_KEY, threads=20, coverage_type=\"standard\"\n",
     "        )\n",
     "        c_with_idx = []\n",
     "        for j in range(len(c)):\n",
@@ -180,6 +184,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "254fc53e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show what fraction of the original points that have at least imagery coverage\n",
+    "f\"{len(df_latest) / len(df_points) * 100:.2f}% of the original points that have valid imagery (with or without AI) in the range.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7a6861af",
    "metadata": {},
    "outputs": [],
@@ -197,8 +212,8 @@
    "outputs": [],
    "source": [
     "# Show what fraction have a valid AI result already\n",
-    "display(f\" {len(df_ai_latest) / len(df_points) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\")\n",
-    "display(f\" {len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the points that have at least one valid imagery survey have valid AI coverage in the since-until range.\")"
+    "display(f\"{len(df_ai_latest) / len(df_points) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\")\n",
+    "display(f\"{len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the points that have at least one valid imagery survey have valid AI coverage in the since-until range.\")"
    ]
   },
   {
@@ -240,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f\" {len(df_no_coverage_latest) / len(df_latest) * 100:0.1f}% of the points that have valid imagery DON'T have valid AI coverage in the since-until range.\""
+    "f\"{len(df_no_coverage_latest) / len(df_latest) * 100:0.1f}% of the points that have valid imagery DON'T have valid AI coverage in the since-until range.\""
    ]
   },
   {
@@ -303,6 +318,80 @@
     "df.query(\"aifeatures\").to_parquet(DATA_DIR / f\"{POINTS_FILE.stem}_all_with_ai_coverage.parquet\")\n",
     "df_latest.to_parquet(DATA_DIR / f\"{POINTS_FILE.stem}_latest_with_ai_coverage.parquet\")\n",
     "df_surveys_to_run.to_csv(DATA_DIR / f\"{POINTS_FILE.stem}_surveys_to_run.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "175221e3",
+   "metadata": {},
+   "source": [
+    "# AI System Version\n",
+    "The AI coverage endpoint in the AI Feature API provides more information than the standard coverage API, particularly about systemversion (e.g. `gen5-tranquil_pool-1.0`). In the next section, we take all the results above that have an AI result, and check what version is available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc27072c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ai = df.query(\"aifeatures == True\")\n",
+    "df_ai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f80bd59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ai_coverage = None\n",
+    "\n",
+    "Path(AI_COVERAGE_CHUNK_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for i in tqdm(range(0, len(df_ai), CHUNK_SIZE)):\n",
+    "    f = os.path.join(AI_COVERAGE_CHUNK_DIR, f\"ai_coverage_chunk_{i}-{i+CHUNK_SIZE}.parquet\")\n",
+    "    if not os.path.exists(f):\n",
+    "        df_ai_chunk = df_ai.iloc[i:i+CHUNK_SIZE,:]\n",
+    "        logging.debug(f\"Pulling chunk from AI coverage API for {f}.\")\n",
+    "        # Multi-threaded pulls are ok - the API is designed to cope fine with 10-20 threads running in parallel pulling requests.\n",
+    "        c = nmaipy.coverage_utils.threaded_get_coverage_from_point_results(\n",
+    "            df_ai_chunk, since_col=\"captureDate\", until_col=\"captureDate\", apikey=API_KEY, threads=20, coverage_type=\"ai\",\n",
+    "        )\n",
+    "        c_with_idx = []\n",
+    "        for j in range(len(c)):\n",
+    "            row_id = df_ai_chunk.iloc[j].name\n",
+    "            c_tmp = c[j].copy()\n",
+    "            if len(c_tmp) > 0:\n",
+    "                c_tmp[ID_COL] = row_id\n",
+    "                c_with_idx.append(c_tmp)\n",
+    "        if len(c_with_idx) > 0:\n",
+    "            c = pd.concat(c_with_idx)\n",
+    "            c.to_parquet(f)\n",
+    "        else:\n",
+    "            c = None\n",
+    "\n",
+    "    else:\n",
+    "        logging.debug(f\"Reading chunk from parquet for {f}.\")\n",
+    "        c = pd.read_parquet(f)\n",
+    "\n",
+    "    if c is not None:\n",
+    "        c = c.set_index(ID_COL)\n",
+    "        df_ai_coverage = pd.concat([df_ai_coverage, c])\n",
+    "df_ai_coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fd0fa1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Breakdown of versions in the most recent valid AI result for each point.\n",
+    "df_ai_coverage.sort_values(\"captureDate\").groupby(ID_COL).last().systemVersion.value_counts()"
    ]
   }
  ],
