[TRO-1248] Tweaks to coverage checker.

--- a/notebooks/Coverage_Checker.ipynb
+++ b/notebooks/Coverage_Checker.ipynb
@@ -17,6 +17,7 @@
     "from tqdm.notebook import tqdm\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "sys.path.append(\"..\")\n",
     "from nmaipy.feature_api import FeatureApi\n",
@@ -156,6 +157,36 @@
     "# The full set of surveys covered by each point, regardless of whether it has AI.\n",
     "df = df_points.merge(df_coverage, left_index=True, right_index=True, how=\"right\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd15e9dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unique surveys covered by a point.\n",
+    "df_surveys = df.sort_values(\"aifeatures\").drop_duplicates([\"survey_id\", \"aifeatures\"], keep=\"last\")\n",
+    "\n",
+    "# Show count of surveys covered/not covered by AI and 3D.\n",
+    "display(df_surveys.aifeatures.value_counts().to_frame())\n",
+    "display(df_surveys[\"3d\"].value_counts().to_frame())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a31fd0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_surveys_missing_ai = df_surveys.sort_values(\"captureDate\").query(\"aifeatures == False\")\n",
+    "pd.to_datetime(df_surveys[\"captureDate\"]).hist(bins=30, label=\"All\")\n",
+    "pd.to_datetime(df_surveys_missing_ai[\"captureDate\"]).hist(bins=30, label=\"Missing AI\")\n",
+    "plt.title(\"Survey Capture Date Distribution (with/without AI)\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout()"
    ]
   },
   {
