[TRO-1248] Improved coverage tools

--- a/notebooks/Coverage_Checker.ipynb
+++ b/notebooks/Coverage_Checker.ipynb
@@ -66,11 +66,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if \"since\" not in df_points.columns:\n",
-    "    df_points[\"since\"] = SINCE # A very old date just to have a since column.\n",
-    "else:\n",
-    "    df_points[\"since\"] = df_points[\"since\"].dt.strftime(\"%Y-%m-%d\")\n",
-    "df_points[\"until\"] = df_points[\"until\"].dt.strftime(\"%Y-%m-%d\")"
+    "df_points[\"since\"] = SINCE\n",
+    "df_points[\"until\"] = UNTIL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f706fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_points.since.hist()\n",
+    "df_points.until.hist()\n",
+    "df_points"
    ]
   },
   {
@@ -141,7 +150,7 @@
     "\n",
     "    if c is not None:\n",
     "        c = (c\n",
-    "             .loc[:,[ID_COL, \"captureDate\", \"survey_id\", \"survey_resource_id\", \"aifeatures\", \"3d\"]]\n",
+    "             .loc[:,[ID_COL, \"captureDate\", \"survey_id\", \"survey_resource_id\", \"tiles\", \"aifeatures\", \"3d\"]]\n",
     "             .set_index(ID_COL)\n",
     "            )\n",
     "        df_coverage = pd.concat([df_coverage, c])"
@@ -167,10 +176,10 @@
    "outputs": [],
    "source": [
     "# Unique surveys covered by a point.\n",
-    "df_surveys = df.sort_values(\"aifeatures\").drop_duplicates([\"survey_id\", \"aifeatures\"], keep=\"last\")\n",
+    "df_surveys = df.sort_values(\"aifeatures\").drop_duplicates([\"survey_id\"], keep=\"last\")\n",
     "\n",
     "# Show count of surveys covered/not covered by AI and 3D.\n",
-    "display(df_surveys.aifeatures.value_counts().to_frame())\n",
+    "display(df_surveys.query(\"tiles == True\").aifeatures.value_counts().to_frame())\n",
     "display(df_surveys[\"3d\"].value_counts().to_frame())"
    ]
   },
@@ -181,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_surveys_missing_ai = df_surveys.sort_values(\"captureDate\").query(\"aifeatures == False\")\n",
+    "df_surveys_missing_ai = df_surveys.sort_values(\"captureDate\").query(\"aifeatures == False & tiles == True\")\n",
     "pd.to_datetime(df_surveys[\"captureDate\"]).hist(bins=30, label=\"All\")\n",
     "pd.to_datetime(df_surveys_missing_ai[\"captureDate\"]).hist(bins=30, label=\"Missing AI\")\n",
     "plt.title(\"Survey Capture Date Distribution (with/without AI)\")\n",
